--- a/package.json
+++ b/package.json
@@ -27,10 +27,14 @@
     "@nestjs/platform-fastify": "^7.5.1",
     "@nestjs/swagger": "^4.7.0",
     "@nestjs/typeorm": "^7.1.4",
+    "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "crypto": "^1.0.1",
+    "dayjs": "^1.9.5",
+    "dotenv": "^8.2.0",
     "fastify-swagger": "^3.5.0",
+    "find-up": "^5.0.0",
     "lodash": "^4.17.20",
     "mysql": "^2.18.1",
     "nest-router": "^1.0.9",
@@ -43,6 +47,7 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.165",
