--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.12.2",
     "crypto": "^1.0.1",
     "dayjs": "^1.9.5",
+    "deepmerge": "^4.2.2",
     "dotenv": "^8.2.0",
     "fastify-swagger": "^3.5.0",
     "find-up": "^5.0.0",
