--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "private": true,
     "license": "UNLICENSED",
     "scripts": {
+        "ts-node": "cross-env NODE_ENV=development ts-node --files -T -r tsconfig-paths/register",
+        "console": "yarn ts-node ./src/console/bin.ts",
         "prebuild": "rimraf dist",
         "build": "yarn prebuild && cross-env NODE_ENV=production nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -34,15 +36,19 @@
         "dayjs": "^1.9.5",
         "deepmerge": "^4.2.2",
         "dotenv": "^8.2.0",
+        "faker": "^5.1.0",
         "fastify-swagger": "^3.5.0",
         "find-up": "^5.0.0",
+        "glob": "^7.1.6",
         "lodash": "^4.17.20",
         "mysql": "^2.18.1",
         "nest-router": "^1.0.9",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^6.6.3",
-        "typeorm": "^0.2.29"
+        "shelljs": "^0.8.4",
+        "typeorm": "^0.2.29",
+        "yargs": "^16.1.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^7.5.1",
@@ -50,9 +56,12 @@
         "@nestjs/testing": "^7.5.1",
         "@types/bcrypt": "^3.0.0",
         "@types/express": "^4.17.8",
+        "@types/faker": "^5.1.4",
+        "@types/glob": "^7.1.3",
         "@types/jest": "^26.0.15",
         "@types/lodash": "^4.14.165",
         "@types/node": "^14.14.6",
+        "@types/shelljs": "^0.8.8",
         "@types/supertest": "^2.0.10",
         "@typescript-eslint/eslint-plugin": "^4.6.1",
         "@typescript-eslint/parser": "^4.6.1",
