--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "@nestjs/common": "^7.5.1",
         "@nestjs/core": "^7.5.1",
+        "@nestjs/jwt": "^7.2.0",
+        "@nestjs/passport": "^7.1.0",
         "@nestjs/platform-express": "^7.5.1",
         "@nestjs/platform-fastify": "^7.5.1",
         "@nestjs/swagger": "^4.7.0",
@@ -44,6 +46,10 @@
         "lodash": "^4.17.20",
         "mysql": "^2.18.1",
         "nest-router": "^1.0.9",
+        "nestjs-typeorm-paginate": "^2.2.1",
+        "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^6.6.3",
@@ -62,6 +68,8 @@
         "@types/jest": "^26.0.15",
         "@types/lodash": "^4.14.165",
         "@types/node": "^14.14.6",
+        "@types/passport-jwt": "^3.0.3",
+        "@types/passport-local": "^1.0.33",
         "@types/shelljs": "^0.8.8",
         "@types/supertest": "^2.0.10",
         "@typescript-eslint/eslint-plugin": "^4.6.1",
