--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "rxjs": "^6.6.3",
         "shelljs": "^0.8.4",
         "typeorm": "^0.2.29",
+        "uuid": "^8.3.1",
         "yargs": "^16.1.0"
     },
     "devDependencies": {
@@ -72,6 +73,7 @@
         "@types/passport-local": "^1.0.33",
         "@types/shelljs": "^0.8.8",
         "@types/supertest": "^2.0.10",
+        "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.6.1",
         "@typescript-eslint/parser": "^4.6.1",
         "cross-env": "^7.0.2",
