--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "license": "UNLICENSED",
     "scripts": {
         "ts-node": "cross-env NODE_ENV=development ts-node --files -T -r tsconfig-paths/register",
-        "console": "yarn prebuild && yarn ts-node ./src/console/bin.ts",
+        "console": "yarn ts-node ./src/console/bin.ts",
         "typeorm": "yarn ts-node ./node_modules/typeorm/cli.js --config console/dboptions.ts",
         "prebuild": "rimraf dist",
         "build": "yarn prebuild && cross-env NODE_ENV=production nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "start": "yarn prebuild && cross-env NODE_ENV=development nest start",
-        "start:dev": "yarn prebuild && cross-env NODE_ENV=development nest start --watch",
-        "start:debug": "yarn prebuild && cross-env NODE_ENV=development nest start --debug --watch",
-        "start:prod": "yarn prebuild && cross-env NODE_ENV=production node dist/main",
+        "start": "cross-env NODE_ENV=development nest start",
+        "start:dev": "cross-env NODE_ENV=development nest start --watch",
+        "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+        "start:prod": "cross-env NODE_ENV=production node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "cross-env NODE_ENV=test jest",
         "test:watch": "cross-env NODE_ENV=test jest --watch",
